[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://gui/m5x7-16-noborder.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/saveload/SaveLoadEntry.gd" type="Script" id=3]

[node name="SaveLoadEntry" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 313.0
margin_bottom = 173.0
custom_constants/separation = 0

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_right = 42.0
margin_bottom = 166.0
text = "Load"

[node name="SaveTexture" type="TextureRect" parent="HBoxContainer"]
margin_left = 42.0
margin_right = 106.0
margin_bottom = 166.0
rect_min_size = Vector2( 64, 36 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 106.0
margin_right = 306.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 20.0

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 141.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 10
text = "saveload_entry_title"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 200.0
margin_bottom = 20.0
text = "Delete"

[node name="DateLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
modulate = Color( 0.560784, 0.560784, 0.560784, 1 )
margin_top = 153.0
margin_right = 200.0
margin_bottom = 166.0
size_flags_vertical = 10
custom_fonts/font = ExtResource( 2 )
text = "saveload_entry_date"
align = 2
